--- a/app/src/main/res/layout/activity_admin_content_main.xml
+++ b/app/src/main/res/layout/activity_admin_content_main.xml
@@ -205,6 +205,7 @@
                 android:layout_weight="5"
                 >
             </LinearLayout>
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -213,7 +214,25 @@
                 android:textColor="#ffffff"
                 android:gravity="center"
                 android:textSize="15dp"
-                android:layout_weight="210"
+                android:layout_weight="105"
+
+                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="1"
+                >
+            </LinearLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:id="@+id/demand_id"
+                android:text="Demand Id"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:layout_weight="105"
 
                 />
 
