--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,5 +18,10 @@
         app:strokeWidth="1dp"
 
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="click to add"
+        android:onClick="add"/>
 
 </RelativeLayout>
