--- a/app/src/main/res/layout/activity_add_demand.xml
+++ b/app/src/main/res/layout/activity_add_demand.xml
@@ -55,29 +55,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/completion_time"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Priority"
-                android:textSize="18sp"
-                android:paddingStart="10dp"/>
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/prioritySpinner"
-                android:spinnerMode="dropdown"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Deadline"
-                android:textSize="18sp"
-                android:paddingStart="10dp"/>
-            <DatePicker
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:id="@+id/deadline">
-
-            </DatePicker>
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/frag">
+           </RelativeLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
