--- a/app/src/main/res/layout/fragment_dependent_demand.xml
+++ b/app/src/main/res/layout/fragment_dependent_demand.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.jaya.hackthaonproject.DependendDemand"
+    android:layout_height="wrap_content"
+    tools:context="com.jaya.hackthaonproject.DependentDemand"
     android:orientation="vertical">
 
 
@@ -16,19 +16,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/priorityText"
-        />
+        android:id="@+id/priorityText" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Deadline"
         android:textSize="18sp"
         android:paddingStart="10dp"/>
-
-    <CalendarView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/calendarView" />
+        android:id="@+id/deadlineText" />
+
 
 
 
