--- a/app/src/main/res/layout/activity_new_demand.xml
+++ b/app/src/main/res/layout/activity_new_demand.xml
@@ -1,80 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/activity_new_demand"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.jaya.hackthaonproject.NewDemand"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Demand"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:paddingTop="10dp"
-        android:fontFamily=""
-        android:gravity="center"/>
-
-
+        android:textAlignment="center"/>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.jaya.hackthaonproject.Add"
+                android:id="@+id/resDetail"
+                tools:layout="@layout/fragment_add" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Resource Type"
+                android:text="Priority"
                 android:textSize="18sp"
                 android:paddingStart="10dp"/>
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/typeSpinner"
+                android:id="@+id/prioritySpinner"
                 android:spinnerMode="dropdown"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Number of Resource"
+                android:text="Deadline"
                 android:textSize="18sp"
                 android:paddingStart="10dp"/>
             <EditText
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/no_of_resources"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Completion Time"
-                android:textSize="18sp"
-                android:paddingStart="10dp"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/completion_time"/>
-         <!--  <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:id="@+id/frag">
-           </RelativeLayout>
-
-            <fragment
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.jaya.hackthaonproject.IndependentDemand"
-                android:id="@+id/fragI" />
-             -->
-            <fragment
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.jaya.hackthaonproject.BlankFragment"
-                android:id="@+id/fragD"/>
-
-
+                android:id="@+id/deadline"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -91,13 +67,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Submit"
-                    android:onClick="submit"
                     android:background="@color/btn_login"/>
             </LinearLayout>
-
-         </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-
 
 
 </LinearLayout>
