demand list not working

--- a/app/src/main/res/layout/activity_new_demand.xml
+++ b/app/src/main/res/layout/activity_new_demand.xml
@@ -71,7 +71,8 @@
                     android:text="Submit"
                     android:background="@color/btn_login"
                     android:layout_marginTop="20dp"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:onClick="submit"/>
 
         </LinearLayout>
     </ScrollView>
