--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -25,7 +25,7 @@
         android:textSize="18sp"
         android:paddingStart="10dp"/>
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/no_of_resources"
         />
@@ -37,7 +37,7 @@
         android:textSize="18sp"
         android:paddingStart="10dp"/>
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/completion_time"/>
 
