--- a/app/src/main/res/layout/fragment_allocated_table.xml
+++ b/app/src/main/res/layout/fragment_allocated_table.xml
@@ -96,7 +96,12 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list_allocated"></ListView>
+        android:id="@android:id/list"></ListView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No data"
+        android:id="@android:id/empty"/>
 
 
 
