--- a/app/src/main/res/layout/activity_view_demands.xml
+++ b/app/src/main/res/layout/activity_view_demands.xml
@@ -4,22 +4,14 @@
     android:id="@+id/activity_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="50dp"
-
-    tools:context="com.jaya.hackthaonproject.Admin">
 
 
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Demands That Can Be Allocated"
-    android:id="@+id/head_text"
-    android:gravity="center"
-    android:textSize="15dp"
-    android:textColor="#000000"/>
+    tools:context="com.jaya.hackthaonproject.ViewDemands">
+
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="160dp"
         android:orientation="vertical"
         android:id="@+id/lay"
         android:layout_below="@+id/head_text"
@@ -48,7 +40,8 @@
 
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
-                android:text="Resource Type"
+                android:id="@+id/location_id"
+                android:text="Location Id"
                 android:textColor="#FF4081"
                 android:gravity="center"
                 android:textSize="15dp"
@@ -65,8 +58,8 @@
 
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
-
-                android:text="No Of Resources"
+                android:id="@+id/resource_type"
+                android:text="Resource Type"
                 android:textColor="#FF4081"
                 android:gravity="center"
                 android:textSize="15dp"
@@ -99,7 +92,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="Demand Id"
+                android:id="@+id/no_of_resources"
+                android:text="No of Resources"
                 android:textColor="#ffffff"
                 android:gravity="center"
                 android:textSize="15dp"
@@ -118,7 +112,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/completion_time"
-                android:text="Date Of Demand"
+                android:text="Completion Time"
                 android:textColor="#ffffff"
                 android:gravity="center"
                 android:layout_weight="105"
@@ -134,6 +128,117 @@
             </LinearLayout>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:orientation="horizontal"
+            android:background="#DCDCDC"
+            android:weightSum="220"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="5"
+                >
+            </LinearLayout>
+
+            <TextView
+
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:id="@+id/priority"
+                android:text="Priority"
+                android:textColor="#FF4081"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:layout_weight="104"
+                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#FF4081"
+                android:layout_weight="1"
+                >
+            </LinearLayout>
+            <TextView
+
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:id="@+id/deadline"
+                android:text="Deadline"
+                android:textColor="#FF4081"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:layout_weight="105"
+
+                />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="5"
+                >
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="#FF4081"
+            android:weightSum="220"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="5"
+                >
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:id="@+id/date_of_demand"
+                android:text="Date Of Demand"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:layout_weight="105"
+
+                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="1"
+                >
+            </LinearLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:id="@+id/demand_id"
+                android:text="Demand Id"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:layout_weight="105"
+
+                />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:background="#ffffff"
+                android:layout_weight="5"
+                >
+            </LinearLayout>
+
+        </LinearLayout>
+
+
 
 
         <LinearLayout
@@ -151,7 +256,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listitems_fulfill"
+        android:id="@+id/listitems"
         android:layout_below="@+id/lay"
         >
 
