--- a/app/src/main/res/menu/activity_admin_drawer.xml
+++ b/app/src/main/res/menu/activity_admin_drawer.xml
@@ -26,7 +26,7 @@
         <item
             android:id="@+id/nav_allocate_demand"
             android:icon="@drawable/ic_allocate_demand"
-            android:title="View DemandS" />
+            android:title="View Demands" />
     </group>
 
     <item android:title="Site Manager">
