--- a/app/src/main/res/layout/granted_row.xml
+++ b/app/src/main/res/layout/granted_row.xml
@@ -26,7 +26,7 @@
 
             android:layout_height="match_parent"
             android:layout_width="0dp"
-            android:id="@+id/location_id_granted"
+            android:id="@+id/id_granted"
             android:text="Demand Id"
             android:textColor="#00897B"
             android:gravity="center"
@@ -44,7 +44,7 @@
 
             android:layout_height="match_parent"
             android:layout_width="0dp"
-            android:id="@+id/resource_type_granted"
+            android:id="@+id/date_granted"
             android:text="Date of Demand"
             android:textColor="#00897B"
             android:gravity="center"
@@ -78,7 +78,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/no_of_resources_granted"
+            android:id="@+id/type_granted"
             android:text="Resource Type"
             android:textColor="#ffffff"
             android:gravity="center"
