--- a/app/src/main/res/layout/free_res_row.xml
+++ b/app/src/main/res/layout/free_res_row.xml
@@ -1,32 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_user_demands"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.jaya.hackthaonproject.Granted">
-<LinearLayout
-    android:id="@+id/activity_granted"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="vertical"
-
-    tools:context="com.jaya.hackthaonproject.Granted">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="50dp">
     <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="10dp"
-    android:background="#ffffff">
-</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:background="#ffffff">
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:background="#FF4081"
+        android:background="#00897B"
         android:weightSum="220"
         >
         <LinearLayout
@@ -39,8 +24,8 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/no_of_resources_granted"
-            android:text="Resource Type"
+            android:id="@+id/id_free"
+            android:text="Resource I.D."
             android:textColor="#ffffff"
             android:gravity="center"
             android:textSize="15dp"
@@ -58,8 +43,8 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:id="@+id/completion_time_granted"
-            android:text="No of Resources"
+            android:id="@+id/type_free"
+            android:text="Resources Type"
             android:textColor="#ffffff"
             android:gravity="center"
             android:layout_weight="105"
@@ -76,17 +61,10 @@
     </LinearLayout>
 
     <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="10dp"
-    android:background="#ffffff">
-</LinearLayout>
-    </LinearLayout>
-    <ListView
-        android:layout_below="@+id/activity_granted"
-        android:id="@+id/listview_granted"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></ListView>
-</RelativeLayout>
+        android:layout_height="10dp"
+        android:background="#ffffff">
+    </LinearLayout>
 
-
+</LinearLayout>
 
