--- a/app/src/main/res/layout/req_res_row.xml
+++ b/app/src/main/res/layout/req_res_row.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="20dp">
+    android:layout_width="match_parent"
+    android:layout_height="20dp"
+    android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/type"
-            android:text="Type"/>
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/no"
-            android:text="No"/>
+    <TextView
+        android:id="@+id/type"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Type" />
 
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/time"
-            android:text="Time"/>
+    <TextView
+        android:id="@+id/no"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="No" />
 
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Time" />
 
 
 </LinearLayout>
