--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jaya.hackthaonproject.About">
+    tools:context="com.jaya.hackthaonproject.About"
+    android:orientation="vertical">
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView_about"
         android:layout_width="match_parent"
@@ -18,10 +19,120 @@
         app:strokeWidth="1dp"
 
         />
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="click to add"
-        android:onClick="add"/>
+        android:text="Wangle"
+        android:layout_below="@+id/carouselView_about"
+        android:id="@+id/Head"
+        android:textSize="30dp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:textStyle="normal|bold" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="The Resource Management App"
+        android:id="@+id/Head2"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:textStyle="normal|bold" />
 
-</RelativeLayout>
+    <TextView
+
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:layout_marginTop="13dp"
+        android:layout_margin="5dp"
+        android:text="About Publishers"
+        android:textColor="#000000"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="italic"/>
+
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginStart="10dp"
+        android:text="Sudhanshu Kumar Ambastha"
+        android:textColor="#000000"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        />
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:text="Shubham Choudhary"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="bold"
+        />
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:text="Jaya Kumari"
+        android:textColor="#000000"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="bold"/>
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:text="Pragya Bharti"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="bold"/>
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginTop="5dp"
+        android:textAlignment="center"
+        android:layout_marginStart="10dp"
+        android:text="Pinki Kumari"
+        android:textColor="#000000"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="bold"/>
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginTop="5dp"
+        android:textAlignment="center"
+        android:layout_marginStart="10dp"
+        android:text="Shivani"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif"
+        android:elevation="0dp"
+        android:textStyle="bold"/>
+
+
+
+</LinearLayout>
