--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,6 +94,13 @@
                 android:text="@string/action_sign_in"
                 android:textSize="20dp"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:id="@+id/error_login"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@android:color/holo_red_dark"/>
 
         </LinearLayout>
     </ScrollView>
