--- a/app/src/main/res/layout/feature_screen1.xml
+++ b/app/src/main/res/layout/feature_screen1.xml
@@ -2,52 +2,50 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screen5"
+    android:background="@color/screen1"
     android:paddingTop="80dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="WANGLE"
-        android:id="@+id/title2"
-        android:textColor="#ffffff"
-        android:textSize="30dp"
-        android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WANGLE"
+            android:id="@+id/title3"
+            android:textColor="#ffffff"
+            android:textSize="30dp"
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="The Resource Management App"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/title2"
-        android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The Resource Management App"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/title"
+            android:layout_gravity="center"/>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/reliable"/>
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+      <ImageView
+          android:layout_width="240dp"
+          android:layout_height="240dp"
+          android:src="@drawable/macbook"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reliable"
+            android:text="Real Time Analysis "
             android:textColor="@android:color/white"
             android:textSize="35dp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="a reliable design which uses database communication"
+            android:text="now analyse the uses of your resources"
             android:textColor="@android:color/white"
             android:textAlignment="center"
             android:layout_marginTop="25dp"
