--- a/app/src/main/res/layout/feature_screen2.xml
+++ b/app/src/main/res/layout/feature_screen2.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screen4"
+    android:background="@color/screen2"
     android:paddingTop="80dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WANGLE"
-            android:id="@+id/title5"
+            android:id="@+id/title4"
             android:textColor="#ffffff"
             android:textSize="30dp"
             android:layout_gravity="center"/>
@@ -25,27 +25,29 @@
             android:layout_below="@+id/title"
             android:layout_gravity="center"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/userfriendly"/>
+            android:src="@drawable/cloc"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User-Friendly"
+            android:text="Time Saving"
             android:textColor="@android:color/white"
             android:textSize="35dp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="it is designed to give user-friendly experience "
+            android:text="saves your time by doing all the work in oneclick"
             android:textColor="@android:color/white"
             android:textAlignment="center"
             android:layout_marginTop="25dp"
