--- a/app/src/main/res/layout/feature_screen5.xml
+++ b/app/src/main/res/layout/feature_screen5.xml
@@ -2,28 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screen2"
+    android:background="@color/screen5"
     android:paddingTop="80dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="WANGLE"
-            android:id="@+id/title4"
-            android:textColor="#ffffff"
-            android:textSize="30dp"
-            android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WANGLE"
+        android:id="@+id/title2"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:layout_gravity="center"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="The Resource Management App"
-            android:textColor="#ffffff"
-            android:layout_below="@+id/title"
-            android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="The Resource Management App"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/title2"
+        android:layout_gravity="center"/>
     </LinearLayout>
 
     <LinearLayout
@@ -36,18 +36,18 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/cloc"/>
+            android:src="@drawable/reliable"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Time Saving"
+            android:text="Reliable"
             android:textColor="@android:color/white"
             android:textSize="35dp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="saves your time by doing all the work in oneclick"
+            android:text="a reliable design which uses database communication"
             android:textColor="@android:color/white"
             android:textAlignment="center"
             android:layout_marginTop="25dp"
