--- a/app/src/main/res/layout/feature_screen_4.xml
+++ b/app/src/main/res/layout/feature_screen_4.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screen1"
+    android:background="@color/screen4"
     android:paddingTop="80dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WANGLE"
-            android:id="@+id/title3"
+            android:id="@+id/title5"
             android:textColor="#ffffff"
             android:textSize="30dp"
             android:layout_gravity="center"/>
@@ -31,21 +31,21 @@
         android:gravity="center_horizontal"
         android:layout_centerInParent="true"
         android:orientation="vertical">
-      <ImageView
-          android:layout_width="240dp"
-          android:layout_height="240dp"
-          android:src="@drawable/macbook"/>
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/userfriendly"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Real Time Analysis "
+            android:text="User-Friendly"
             android:textColor="@android:color/white"
             android:textSize="35dp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="now analyse the uses of your resources"
+            android:text="it is designed to give user-friendly experience "
             android:textColor="@android:color/white"
             android:textAlignment="center"
             android:layout_marginTop="25dp"
