--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,15 +4,15 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/features"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Features" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/how_to_use"
             android:icon="@drawable/ic_menu_manage"
             android:title="How To use" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/about_us"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="About Us" />
     </group>
@@ -20,11 +20,11 @@
     <item android:title="Need Help">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/call"
                 android:icon="@drawable/ic_menu_share"
                     android:title="Call Us" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/mail"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Email Us" />
         </menu>
