rename with LOGIN

--- a/app/src/main/res/layout/activity_admin_content_main.xml
+++ b/app/src/main/res/layout/activity_admin_content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginTop="70dp"
 
-    tools:context="com.jaya.hackthaonproject.Admin">
+    tools:context="com.jaya.hackthaonproject.PC">
 
 
 <TextView
