--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -19,24 +19,6 @@
         app:strokeWidth="1dp"
 
         />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Wangle"
-        android:layout_below="@+id/carouselView_about"
-        android:id="@+id/Head"
-        android:textSize="30dp"
-        android:textColor="#000000"
-        android:gravity="center"
-        android:textStyle="normal|bold" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="The Resource Management App"
-        android:id="@+id/Head2"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:textStyle="normal|bold" />
 
     <TextView
 
@@ -47,30 +29,29 @@
         android:layout_marginTop="13dp"
         android:layout_margin="5dp"
         android:text="About Publishers"
-        android:textColor="#000000"
+        android:textColor="@color/colorAccent"
         android:textAlignment="center"
         android:fontFamily="sans-serif"
         android:elevation="0dp"
-        android:textStyle="italic"/>
+        android:textStyle="italic|bold"/>
+
 
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:layout_marginStart="10dp"
-        android:text="Sudhanshu Kumar Ambastha"
+        android:text="Sudhanshu Kr Ambastha"
         android:textColor="#000000"
         android:fontFamily="sans-serif"
         android:elevation="0dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         />
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
@@ -78,7 +59,7 @@
         android:textColor="@color/colorPrimary"
         android:fontFamily="sans-serif"
         android:elevation="0dp"
-        android:textStyle="bold"
+
         />
     <TextView
 
@@ -89,50 +70,43 @@
         android:layout_marginStart="10dp"
         android:text="Jaya Kumari"
         android:textColor="#000000"
-        android:textAlignment="center"
         android:fontFamily="sans-serif"
-        android:elevation="0dp"
-        android:textStyle="bold"/>
+        android:elevation="0dp" />
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:textAlignment="center"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:text="Pragya Bharti"
         android:textColor="@color/colorPrimary"
         android:fontFamily="sans-serif"
-        android:elevation="0dp"
-        android:textStyle="bold"/>
+        android:elevation="0dp" />
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_marginTop="5dp"
-        android:textAlignment="center"
         android:layout_marginStart="10dp"
         android:text="Pinki Kumari"
         android:textColor="#000000"
         android:fontFamily="sans-serif"
         android:elevation="0dp"
-        android:textStyle="bold"/>
+       />
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_marginTop="5dp"
-        android:textAlignment="center"
         android:layout_marginStart="10dp"
         android:text="Shivani"
         android:textColor="@color/colorPrimary"
         android:fontFamily="sans-serif"
         android:elevation="0dp"
-        android:textStyle="bold"/>
-
+/>
 
 
 </LinearLayout>
