--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,13 +13,29 @@
     tools:context="com.jaya.hackthaonproject.LoginActivity">
 
     <!-- Login progress -->
+
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+        android:layout_marginTop="180dp"
+        android:visibility="gone"
+        android:layout_marginLeft="130dp"/>
+
+    <TextView
+        android:id="@+id/progress_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Please wait... Checking your credentials"
+        android:visibility="gone"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/login_progress"
+        android:textStyle="italic"
+        android:textSize="18dp"
+        />
 
 
     <ScrollView
@@ -32,22 +48,22 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center"
+            android:orientation="vertical"
 
             >
+
             <TextView
+                android:id="@+id/text_head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="12dp"
+                android:gravity="center"
                 android:text="User or Admin need to SignIn here."
                 android:textColor="#00897B"
-                 android:layout_gravity="center"
-                android:id="@+id/text_head"
-                android:textSize="30dp"
-                android:gravity="center"
 
-                android:layout_marginBottom="120dp"
-                />
+                android:textSize="30dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -78,30 +94,30 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true"
-                    />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
-                android:background="#00897B"
-                android:textColor="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="#00897B"
                 android:text="@string/action_sign_in"
+                android:textColor="#ffffff"
                 android:textSize="20dp"
                 android:textStyle="bold" />
+
             <TextView
+                android:id="@+id/error_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:id="@+id/error_login"
                 android:layout_gravity="center_horizontal"
-                android:textColor="@android:color/holo_red_dark"/>
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark" />
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</RelativeLayout>
