--- a/app/src/main/res/layout/activity_manua.xml
+++ b/app/src/main/res/layout/activity_manua.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.jaya.hackthaonproject.Manua">
+    tools:context="com.jaya.hackthaonproject.Manual">
 
 </RelativeLayout>
