--- a/app/src/main/res/layout/activity_new_demand.xml
+++ b/app/src/main/res/layout/activity_new_demand.xml
@@ -4,10 +4,8 @@
     android:id="@+id/activity_new_demand"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="30dp"
+    android:paddingTop="10dp"
     tools:context="com.jaya.hackthaonproject.NewDemand"
     android:orientation="vertical">
 
@@ -19,8 +17,9 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="Priority"
-        android:textSize="18sp"
-        android:layout_marginLeft="5dp"/>
+        android:textSize="16sp"
+        android:layout_marginLeft="8dp"
+        android:textColor="#000000"/>
     <Spinner
         android:layout_width="70dp"
         android:layout_height="wrap_content"
@@ -30,8 +29,9 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="Deadline"
-        android:textSize="18sp"
-        android:layout_marginLeft="10dp"/>
+        android:textSize="16sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="#000000"/>
     <EditText
         android:layout_width="80dp"
         android:layout_height="wrap_content"
@@ -45,13 +45,17 @@
         tools:layout="@layout/fragment_add"/>
 
     <TextView
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Requested Resource"
+        android:text="Requested Resources:"
+        android:textColor="@color/colorAccent"
 />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
+        android:layout_marginLeft="15dp"
         android:id="@+id/listScroll">
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,15 +72,20 @@
     </ScrollView>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:background="@color/btn_login"
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
+        android:textSize="19dp"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:onClick="submit"
         android:layout_alignParentBottom="true"
-        android:id="@+id/submitBtn"/>
+        android:id="@+id/submitBtn"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
 
 </LinearLayout>
