--- a/app/src/main/res/layout/activity_prempt.xml
+++ b/app/src/main/res/layout/activity_prempt.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.jaya.hackthaonproject.Prempt">
+    tools:context="com.jaya.hackthaonproject.Preempt">
 
     <TextView
         android:text="Resources Can Be Allocated "
