--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
 
-    tools:context="com.jaya.hackthaonproject.show">
+    tools:context="com.jaya.hackthaonproject.ShowSM">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
