--- a/app/src/main/res/layout/app_bar_user.xml
+++ b/app/src/main/res/layout/app_bar_user.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.jaya.hackthaonproject.User">
+    tools:context="com.jaya.hackthaonproject.SM">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -88,7 +88,13 @@
             fab:fab_size="mini" />
     </com.github.clans.fab.FloatingActionMenu> -->
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/plus" />
 
 
 </android.support.design.widget.CoordinatorLayout>
