rename with LOGIN

--- a/app/src/main/res/layout/activity_new_demand.xml
+++ b/app/src/main/res/layout/activity_new_demand.xml
@@ -85,7 +85,8 @@
         android:id="@+id/submitBtn"
         android:textStyle="bold"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp"
+        />
 
 
 </LinearLayout>
