--- a/app/src/main/res/layout/activity_view_demands.xml
+++ b/app/src/main/res/layout/activity_view_demands.xml
@@ -246,12 +246,7 @@
             android:layout_height="10dp"
             android:background="#ffffff">
         </LinearLayout>
-    </LinearLayout>-->
-
-
-
-
-
+    </LinearLayout>
     <ListView
 
         android:layout_width="match_parent"
